# i_bayes_rule_tf

./: .gitignore  README.md  profile.out  setup.cfg
misc/: test_jacobian.py
scripts/: run_i_bayesian_learning_rule_gmm.py
scripts/aggbyopt_nps/: run_aggbyopt_nps.py
scripts/i_bayes_rule/: run_i_bayesian_learning_rule_gmm.py
src/aggbyopt_nps/: np.py  util.py
src/i_bayes_rule/: i_bayesian_learning_rule_gmm.py  lnpdf.py  util.py  util_autograd.py
tests/: test_i_bayes_rule.py  test_util.py  test_util_autograd.py
