[metadata]
name = aggbyopt_nps 
description = tbd
author = Michael Volpp
license = tbd
license_file = LICENSE
platforms = linux, osx
version = 0.0.1
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
install_requires =
    numpy>=1.22.1
    torch>=1.10.1
    pytest>=6.2.5
python_requires = >=3.9
package_dir =
    =src
packages =
    aggbyopt_nps