[metadata]
name = aggbyopt_nps 
description = tbd
author = Michael Volpp
license = tbd
license_file = LICENSE
platforms = linux, osx
version = 0.0.1
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
install_requires =
    numpy>=1.22.1
    tensorflow>=2.7.0
    tensorflow-probability>=0.15.0
    pytest>=6.2.5
    tqdm>=4.62.3
    matplotlib>=3.5.1
    metalearning-benchmarks>=0.0.1
    wandb>=0.12.0
    metalearning-eval-util
python_requires = >=3.9
package_dir =
    =src
packages =
    aggbyopt_nps
    i_bayes_rule