[metadata]
name = i_bayes_rule
description = The improved Bayesian learning rule for finite Gaussian mixtures in TensorFlow 2
author = Michael Volpp
license = MIT 
license_file = LICENSE
platforms = linux, osx
version = 0.0.1
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = 
    >=3.8
install_requires =
    numpy>=1.22
    tensorflow>=2.7
    tensorflow-probability>=0.15
    tqdm>=4.62
    matplotlib>=3.5
package_dir =
    =src
packages =
    i_bayes_rule
extras_requires =
    pytest>=6.2
